test/expected/diag_assignment_prefix_read_before_set.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "$foo"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "after"]
[Word
  Unquoted "foo=bar"
]
[Word
  Unquoted "echo"
]
[Word
  Variable "foo"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "after"
]
shit: 2:14: warning: The assignment prefix does not affect this command, 'foo' is read before it is set.
     2 |  foo=bar echo "$foo"
       |               ^~~~~~ here.
shit: 2:15: error: Unable to expand 'foo' because the parameter is not set.
     2 |  foo=bar echo "$foo"
       |                ^~~~ here.
note: Replace it with ${foo-} if empty expansion is desired.
